syntax = "proto3";
package protolink__driver_msgs__PowerState;

message driver_msgs__PowerState {
message std_msgs__Header {
message builtin_interfaces__Time {
optional int32 sec = 1;
optional uint32 nanosec = 2;
}

builtin_interfaces__Time stamp = 1;
optional string frame_id = 2;
}

std_msgs__Header header = 1;
message common_msgs__Status {
optional uint32 id = 1;
}

common_msgs__Status status = 2;
optional float log_voltage = 3;
optional float log_current = 4;
optional float log_power = 5;
optional float act_voltage = 6;
optional float act_current = 7;
optional float act_power = 8;
optional float log_temp = 9;
optional float act_temp = 10;
}