syntax = "proto3";
package protolink__driver_msgs__RtcTime;

message driver_msgs__RtcTime {
message std_msgs__Header {
message builtin_interfaces__Time {
optional int32 sec = 1;
optional uint32 nanosec = 2;
}

builtin_interfaces__Time stamp = 1;
optional string frame_id = 2;
}

std_msgs__Header header = 1;
message common_msgs__Status {
optional uint32 id = 1;
}

common_msgs__Status status = 2;
optional uint32 year = 3;
optional uint32 month = 4;
optional uint32 day = 5;
optional uint32 hour = 6;
optional uint32 minute = 7;
optional uint32 second = 8;
}